plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromClassToAlias/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>Header<!> {

}
